[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Vacuum.gd" type="Script" id=2]
[ext_resource path="res://Trail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 192.101, 55.4964 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192.101, 116.073 )

[node name="Vacuum" type="StaticBody2D" groups=[
"world",
]]
script = ExtResource( 2 )
force = 0.03

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.570984, 41.1111 )
rotation = 0.00347998
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.247059, 0.427451, 0.184314, 1 )
scale = Vector2( 3, 0.2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.05487, -100.128 )
shape = SubResource( 2 )

[node name="Trail" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 1 )
show_behind_parent = true
position = Vector2( 0, -30 )
rotation = 3.14159
scale = Vector2( 1.5, 1 )
emitting = true
amount = 138
lifetime = 11.9
one_shot = false
explosiveness = 0.27
randomness = 0.32
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
